<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Clock</string>
    <string name="no_alarms">There are no active alarms or reminders yet</string>
    <string name="add_new_alarm">Add alarm</string>
    <string name="add_new_alarm_title">Add New Alarm</string>
    <string name="edit_alarm_title">Edit Alarm</string>
    <string name="add_new_reminder">Add reminder</string>
    <string name="add_new_reminder_title">Add New Reminder</string>
    <string name="edit_reminder_title">Edit Reminder</string>
    <string name="set_alarm_time">Set Alarm Time</string>
    <string name="alarm_time_set">Alarm Time</string>
    <string name="set_reminder_time">Set Reminder Time</string>
    <string name="reminder_time_set">Reminder Time</string>
    <string name="edit">Edit</string>
    <string name="turn_off">Turn Off</string>
    <string name="turn_on">Turn On</string>
    <string name="delete">Delete</string>
    <string name="alarm">Alarm</string>
    <string name="reminder">Reminder</string>
    <string name="description">Description</string>
    <string name="about_reminder">About Reminder</string>
    <string name="alarm_time">Time</string>
    <string name="alarm_day">Day</string>
    <string name="alarm_options">Expand options</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="validation_alarm_type">Please select a type.</string>
    <string name="validation_hour">Please select a valid hour.</string>
    <string name="validation_minute">Please select a valid minute.</string>
    <string name="and">and</string>
    <string name="unsupported_operation">Unsupported operation.</string>
    <string name="reminder_with_no_description">A reminder should have a description.</string>
    <string name="snooze">Snooze</string>

    <!-- alarm alert strings -->
    <string name="alarm_set">Alarm Set</string>
    <string name="reminder_set">Reminder Set</string>
    <string name="back">Back</string>

    <string name="alarm_is_set_at">Alarm is set at %1$s</string>
    <string name="reminder_is_set_at">Reminder is set at %1$s</string>
    <string name="every">Every %1$s</string>
    <string name="remaining_time">Remaining time until ring: %1$s</string>
    <string name="remaining_time_detail_days" tools:ignore="PluralsCandidate">%1$d days, %2$d hours and %3$d minutes</string>
    <string name="remaining_time_detail_hours" tools:ignore="PluralsCandidate">%1$d hours and %2$d minutes</string>
    <string name="remaining_time_detail_minutes" tools:ignore="PluralsCandidate">%1$d minutes</string>
    <string name="remaining_time_few_seconds">a few seconds</string>

    <!-- eof alarm alert strings -->

    <string name="alarm_title">%1$s • %2$s</string>
    <string name="ring_in">Ring in %1$s</string>

    <string name="ringtone">Ringtone: %1$s</string>
    <string name="vibrate_on">Vibrate on</string>
    <string name="vibrate_off">Vibrate off</string>

    <string name="time_display">%1$s:%2$s</string>

    <!-- content descriptions for buttons that change hour and minutes -->
    <string name="add_hour">Add hour</string>
    <string name="subtract_hour">Subtract hour</string>
    <string name="add_minute">Add minute</string>
    <string name="subtract_minute">Subtract minute</string>

</resources>
