<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.v7.widget.CardView
            android:id="@+id/alarm_container_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/alarm_container_card_inner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/common_grey50"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/alarm_type_handler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_selection_elevation"
                    android:background="@color/common_blueA700"
                    android:elevation="@dimen/common_selection_elevation">

                    <RelativeLayout
                        android:id="@+id/alarm_type_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@color/common_white"
                        android:paddingBottom="36dp">

                        <TextView
                            android:id="@+id/alarm_type_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_label_black_24dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/alarm_type"
                            android:textColor="@color/common_black58"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:id="@+id/alarm_type_radio_group_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/alarm_type_text"
                            android:layout_below="@id/alarm_type_text"
                            android:orientation="vertical">

                            <RadioGroup
                                android:id="@+id/alarm_type_radio_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="32dp">

                                <RadioButton
                                    android:id="@+id/alarm_type_radio_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start"
                                    android:button="@null"
                                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                                    android:fontFamily="sans-serif-medium"
                                    android:gravity="start|center"
                                    android:text="@string/alarm"
                                    android:textAlignment="textStart"
                                    android:textColor="@color/common_black58"
                                    android:textSize="16sp" />

                                <RadioButton
                                    android:id="@+id/reminder_type_radio_button"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start"
                                    android:button="@null"
                                    android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                                    android:fontFamily="sans-serif-medium"
                                    android:gravity="start|center"
                                    android:text="@string/reminder"
                                    android:textAlignment="textStart"
                                    android:textColor="@color/common_black58"
                                    android:textSize="16sp" />

                            </RadioGroup>

                            <EditText
                                android:id="@+id/alarm_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="28dp"
                                android:layout_marginTop="8dp"
                                android:hint="@string/description"
                                android:inputType="text"
                                android:textSize="14sp"
                                android:visibility="gone" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/alarm_time_handler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/common_selection_elevation"
                    android:layout_marginTop="@dimen/wizard_margin_top"
                    android:background="@color/common_solitude"
                    android:elevation="0dp">

                    <RelativeLayout
                        android:id="@+id/alarm_time_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@color/common_grey50">

                        <TextView
                            android:id="@+id/alarm_time_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_access_time_24dp"
                            android:text="@string/alarm_time"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:id="@+id/alarm_time_control"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/alarm_time_text"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_add_24dp" />

                                <EditText
                                    android:id="@+id/hour"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:inputType="number"
                                    android:maxLength="2" />

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_add_24dp" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time_separator" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_add_24dp" />

                                <EditText
                                    android:id="@+id/minute"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:inputType="number"
                                    android:maxLength="2" />

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_add_24dp" />

                            </LinearLayout>

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/alarm_days_handler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/wizard_margin_top"
                    android:background="@color/common_solitude">

                    <RelativeLayout
                        android:id="@+id/alarm_days_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@color/common_grey50">

                        <TextView
                            android:id="@+id/alarm_days_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_insert_invitation_black_24dp"
                            android:text="@string/alarm_day"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:id="@+id/alarm_days_radio_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/alarm_days_text"
                            android:layout_below="@id/alarm_days_text"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="28dp"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <ToggleButton
                                android:id="@+id/monday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                                android:gravity="start|center"
                                android:text="@string/monday"
                                android:textAllCaps="false"
                                android:textOff="@string/monday"
                                android:textOn="@string/monday"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/tuesday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                                android:gravity="start|center"
                                android:text="@string/tuesday"
                                android:textAllCaps="false"
                                android:textOff="@string/tuesday"
                                android:textOn="@string/tuesday"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/wednesday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                                android:gravity="start|center"
                                android:text="@string/wednesday"
                                android:textAllCaps="false"
                                android:textOff="@string/wednesday"
                                android:textOn="@string/wednesday"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/thursday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                                android:gravity="start|center"
                                android:text="@string/thursday"
                                android:textAllCaps="false"
                                android:textOff="@string/thursday"
                                android:textOn="@string/thursday"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/friday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                                android:gravity="start|center"
                                android:text="@string/friday"
                                android:textAllCaps="false"
                                android:textOff="@string/friday"
                                android:textOn="@string/friday"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/saturday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                                android:gravity="start|center"
                                android:text="@string/saturday"
                                android:textAllCaps="false"
                                android:textOff="@string/saturday"
                                android:textOn="@string/saturday"
                                android:textSize="18sp" />

                            <ToggleButton
                                android:id="@+id/sunday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                                android:gravity="start|center"
                                android:text="@string/sunday"
                                android:textAllCaps="false"
                                android:textOff="@string/sunday"
                                android:textOn="@string/sunday"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/prev_step_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_arrow_upward_24dp"
        android:visibility="gone"
        app:backgroundTint="@color/common_white"
        app:layout_anchor="@id/alarm_time_container"
        app:layout_anchorGravity="top|end" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next_step_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_check_24dp"
        android:visibility="gone"
        app:backgroundTint="@color/common_white"
        app:layout_anchor="@id/alarm_time_container"
        app:layout_anchorGravity="top|end" />

</android.support.design.widget.CoordinatorLayout>