<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/alarm_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="2dp">

        <RelativeLayout
            android:id="@+id/alarm_container_card_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@color/common_grey50">

            <ImageView
                android:id="@+id/alarm_type_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:gravity="top"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/alarm_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/alarm_type_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alarm_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start|center"
                    android:minHeight="25dp"
                    android:textColor="@color/common_black54"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/alarm_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start|center"
                    android:maxLines="2"
                    android:minHeight="28dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/alarm_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start|center"
                    android:maxLines="1"
                    android:minHeight="28dp"
                    android:textColor="@color/common_black54"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/call_buttons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/alarm_details_container"
                android:orientation="vertical"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/common_black12" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">

                    <Button
                        android:id="@+id/button_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:minWidth="@dimen/common_button_min_width"
                        android:paddingEnd="14dp"
                        android:paddingStart="14dp"
                        android:text="@string/edit"
                        android:textColor="@color/common_white" />

                    <Button
                        android:id="@+id/button_turn_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/button_edit"
                        android:background="@color/common_white"
                        android:minWidth="@dimen/common_button_min_width"
                        android:paddingEnd="14dp"
                        android:paddingStart="14dp"
                        android:text="@string/turn_off" />

                    <TextView
                        android:id="@+id/txt_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_toStartOf="@id/button_turn_off"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="start|center"
                        android:singleLine="true"
                        android:text="@string/delete"
                        android:textAllCaps="true"
                        android:textSize="14sp" />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>


